[gd_scene load_steps=10 format=3 uid="uid://dv3w778pybdnp"]

[ext_resource type="Texture2D" uid="uid://csqw4bp67dn74" path="res://art/customer_farmer_happy.png" id="1_hwci6"]
[ext_resource type="Script" path="res://scripts/customer.gd" id="2_ws0x7"]
[ext_resource type="Texture2D" uid="uid://bwyi4fahmmybj" path="res://art/request_bubble.png" id="3_pf448"]
[ext_resource type="Resource" uid="uid://cyews8cxrbl1j" path="res://customers/farmer.tres" id="3_vhesr"]
[ext_resource type="Texture2D" uid="uid://bhrt4mlnadpsm" path="res://art/bowl_of_beans.png" id="4_k8vuj"]
[ext_resource type="Texture2D" uid="uid://bqsqsn6db1gqc" path="res://art/satisfaction_bar.png" id="5_yopei"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1oghr"]
radius = 86.9832

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qwxd0"]
size = Vector2(270.588, 285.256)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cpjbm"]
size = Vector2(22.9412, 51.1765)

[node name="Customer" type="Sprite2D"]
position = Vector2(0, 340)
scale = Vector2(0.85, 0.85)
texture = ExtResource("1_hwci6")
script = ExtResource("2_ws0x7")
customer_info = ExtResource("3_vhesr")

[node name="RequestBubble" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(185.882, -118.529)
scale = Vector2(1.40625, 1.53952)
texture = ExtResource("3_pf448")

[node name="Area2D" type="Area2D" parent="RequestBubble"]
position = Vector2(-1.33853, -2.09154)
scale = Vector2(0.711111, 0.711111)

[node name="BubbleCollision" type="CollisionShape2D" parent="RequestBubble/Area2D"]
position = Vector2(14, 4)
shape = SubResource("CircleShape2D_1oghr")

[node name="PersonCollision" type="CollisionShape2D" parent="RequestBubble/Area2D"]
position = Vector2(-182.823, 99.6861)
shape = SubResource("RectangleShape2D_qwxd0")

[node name="Request1" type="Sprite2D" parent="."]
z_index = 3
position = Vector2(198, -182)
scale = Vector2(0.473576, 0.473576)
texture = ExtResource("4_k8vuj")

[node name="Request2" type="Sprite2D" parent="."]
z_index = 3
position = Vector2(198, -122)
scale = Vector2(0.473576, 0.473576)
texture = ExtResource("4_k8vuj")

[node name="Request3" type="Sprite2D" parent="."]
z_index = 3
position = Vector2(198, -62)
scale = Vector2(0.473576, 0.473576)
texture = ExtResource("4_k8vuj")

[node name="Satisfaction" type="Sprite2D" parent="."]
z_index = 3
position = Vector2(305.882, -127)
scale = Vector2(0.567555, 0.693933)
texture = ExtResource("5_yopei")
region_enabled = true
region_rect = Rect2(0, 0, 64, 256)

[node name="Nose" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Nose"]
position = Vector2(-2.38419e-07, -61.1765)
shape = SubResource("RectangleShape2D_cpjbm")

[connection signal="mouse_entered" from="RequestBubble/Area2D" to="." method="mouse_entered_bubble"]
[connection signal="mouse_exited" from="RequestBubble/Area2D" to="." method="mouse_exited_bubble"]
[connection signal="mouse_entered" from="Nose" to="." method="_on_nose_mouse_entered"]
[connection signal="mouse_exited" from="Nose" to="." method="_on_nose_mouse_exited"]
